# libpicomedia

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
build2/examples/image_viewer/: image_viewer
build2/tests/: test
examples/: CMakeLists.txt
examples/image_viewer/: CMakeLists.txt  ReadMe.md
examples/image_viewer/include/: window_manager.h
examples/image_viewer/source/: main.c  window_manager_wayland.c  window_manager_win32.c  window_manager_x11.c
examples/sandbox/: CMakeLists.txt  ReadMe.md
examples/sandbox/source/: main.c
include/libpicomedia/: libpicomedia.h  libpicomedia.hpp
include/libpicomedia/common/: checksums.h  common.h  common.hpp  common_base.h  stream.h  string_utils.h  thread.h  utils.h
include/libpicomedia/image/: image.h  image.hpp  image_base.h  image_transforms.h
include/libpicomedia/image/bmp/: bmp.h
include/libpicomedia/image/png/: png.h
include/libpicomedia/image/ppm/: ppm.h  ppm.hpp  ppm_base.h
source/: src.c
source/common/: common_stream.c  common_utils.c  stream.c  string_utils.c
source/common/checksums/: common_crc32.c
source/common/thread/: common_thread_posix.c  common_thread_win32.c
source/image/: image_base.c  image_transforms.c
source/image/bmp/: bmp_base.c  bmp_detect.c  bmp_read.c  bmp_write.c
source/image/png/: png_base.c  png_detect.c  png_read.c
source/image/ppm/: ppm_base.c  ppm_detect.c  ppm_read.c  ppm_write.c
tests/: CMakeLists.txt  test.c  test_common_stream.c  test_common_stream.cpp
